hphp/hack/test/typecheck/capitalization7.php
<?hh

class C {
  public function camelCase(): void {}
}

function foo(): void {
  $c = new C();
  $c->camelcase();
}
